# QRCode

./: CMakeLists.txt  CSVHelper.cpp  CSVHelper.h  DBHelper.cpp  DBHelper.h  Texture.cpp  Texture.h  WindowDesigner.cpp  WindowDesigner.h  common.cpp  common.h  main.cpp  myImage.cpp  myImage.h
libs/glew-2.1.0/msvc/: glew.vcxproj
libs/glew-2.1.0/msvc/glew.dir/vc143/x64/vs2022_Release/: glew.res  glew32.dll.recipe
libs/glew-2.1.0/msvc/glew.dir/vc143/x64/vs2022_Release/glew.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  glew.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog
libs/glew-2.1.0/msvc/glew_s.dir/vc143/x64/vs2022_Release/glew_s.tlog/: CL.command.1.tlog  CL.write.1.tlog  Cl.items.tlog  Lib-link-cvtres.read.1.tlog  Lib-link-cvtres.write.1.tlog  Lib.command.1.tlog  rc.command.1.tlog  rc.write.1.tlog
libs/glew-2.1.0/msvc/glewinfo.dir/vc143/x64/vs2022_Release/: glewinfo.res
libs/glew-2.1.0/msvc/glewinfo.dir/vc143/x64/vs2022_Release/glewinfo.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog
libs/glew-2.1.0/msvc/vc143/x64/vs2022_Release/: libglew32.lib
libs/glew-2.1.0/msvc/visualinfo.dir/vc143/x64/vs2022_Release/: visualinfo.res
libs/glew-2.1.0/msvc/visualinfo.dir/vc143/x64/vs2022_Release/visualinfo.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog
libs/glew-2.1.0_LESS/lib/Release/x64/: glew32s.lib
libs/imgui/: ImFileDialog.cpp  imgui.cpp  imgui_demo.cpp
libs/imgui/backend/: imgui_impl_glfw.cpp  imgui_impl_sdl.cpp
libs/imgui/examples/example_glfw_opengl3/: example_glfw_opengl3.vcxproj  example_glfw_opengl3.vcxproj.filters
libs/imgui/examples/example_glfw_vulkan/: example_glfw_vulkan.vcxproj
libs/imgui/examples/example_sdl_opengl3/: example_sdl_opengl3.vcxproj  example_sdl_opengl3.vcxproj.filters
libs/imgui/examples/example_sdl_sdlrenderer/: example_sdl_sdlrenderer.vcxproj
libs/imgui/examples/example_sdl_vulkan/: example_sdl_vulkan.vcxproj
libs/imgui/examples/example_win32_directx11/: example_win32_directx11.vcxproj
libs/imgui/examples/example_win32_directx12/: example_win32_directx12.vcxproj
libs/imgui/examples/example_win32_directx9/: example_win32_directx9.vcxproj  example_win32_directx9.vcxproj.filters
libs/rapidcsv/src/: rapidcsv.h
x64/Debug/: Csv new.csv  data.db  imgui.ini
x64/Release/: csv.csv  data.db  imgui.ini
